--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ flutter:
   assets:
     - assets/images/
 
+  fonts:
+    - family: Itim
+      fonts:
+        - asset: fonts/Itim-Regular.ttf
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
